javascript-react/k8s-resources/javascript-react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    checksum/config: ${CHECKSUM}
  name: javascript-react
  labels:
    app: javascript-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: javascript-react
  template:
    metadata:
      annotations:
        checksum/config: ${CHECKSUM}
      labels:
        app: javascript-react
    spec:
      containers:
      - name: nodeserver
        image: javascript-react:1.0.0-SNAPSHOT # Replace with JAVASCRIPT_REACT image
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    checksum/config: ${CHECKSUM}
  labels:
    app: javascript-react
  name: javascript-react-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: javascript-react
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    checksum/config: ${CHECKSUM}
  labels:
    app: javascript-react
  name: javascript-react
spec:
  rules:
    - host: javascript-react.${NAMESPACE}.${MINIKUBE_IP}.nip.io # Replace with JAVASCRIPT_REACT_URL
      http:
        paths:
          - backend:
              service:
                name: javascript-react-service
                port:
                  name: http
            path: /
            pathType: Prefix
